@@ -3,7 +3,7 @@
 # daemon/__init__.py
 # Part of ‘python-daemon’, an implementation of PEP 3143.
 #
-# Copyright © 2009–2011 Ben Finney <ben+python@benfinney.id.au>
+# Copyright © 2009–2012 Ben Finney <ben+python@benfinney.id.au>
 # Copyright © 2006 Robert Niederreiter
 #
 # This is free software: you may copy, modify, and/or distribute this work
